Readme.md Discord server link and version change

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -52,7 +52,7 @@ body:
     id: version
     attributes:
       label: Neurotrauma Version
-      placeholder: "A1.9.3"
+      placeholder: "A1.9.3h1"
     validations:
       required: true
   - type: textarea
