--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -17,6 +17,8 @@ body:
     attributes:
       label: LuaForBarotrauma version
       options:
+        - 1.0.95
+        - 1.0.94
         - 1.0.93
         - 1.0.92
         - 1.0.91
@@ -28,8 +30,6 @@ body:
         - 1.0.85
         - 1.0.84
         - 1.0.83
-        - 1.0.82
-        - 1.0.81
     validations:
       required: true
   - type: dropdown
@@ -52,7 +52,7 @@ body:
     id: version
     attributes:
       label: Neurotrauma Version
-      placeholder: "A1.9.3h1"
+      placeholder: "A1.9.4"
     validations:
       required: true
   - type: textarea
