--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -19,6 +19,8 @@ body:
     attributes:
       label: LuaForBarotrauma version
       options:
+        - 1.0.99
+        - 1.0.98
         - 1.0.97
         - 1.0.96
         - 1.0.95
@@ -30,8 +32,6 @@ body:
         - 1.0.89
         - 1.0.88
         - 1.0.87
-        - 1.0.86
-        - 1.0.85
     validations:
       required: true
   - type: dropdown
@@ -44,7 +44,7 @@ body:
         - "NT Cybernetics"
         - "NT Pharmacy"
         - "Curly's NT Surgery Plus Ultra (name Pending)"
-        - "Neurotrauma Tutorial Map: Mercy Hospital"
+        - "Neurotrauma Tutorial Map: Mercy Hospital Updated"
         - "NT Blahaj Plus"
         - "NT Symbiote"
         - "No expansions"
