Fix string and scanner rads

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -19,6 +19,7 @@ body:
     attributes:
       label: LuaForBarotrauma version
       options:
+        - 1.0.100
         - 1.0.99
         - 1.0.98
         - 1.0.97
@@ -31,7 +32,6 @@ body:
         - 1.0.90
         - 1.0.89
         - 1.0.88
-        - 1.0.87
     validations:
       required: true
   - type: dropdown
@@ -54,7 +54,7 @@ body:
     id: version
     attributes:
       label: Neurotrauma Version
-      placeholder: "A1.10.3h1"
+      placeholder: "A1.10.4"
     validations:
       required: true
   - type: textarea
